# gba

./: .gba.md  .gitignore  CLAUDE.md  Cargo.toml  _typos.toml  deny.toml
.chats/: 20260202.md
.gba/: config.yaml
.gba/features/0002-log-to-file/: phases.yaml
.gba/features/0002-log-to-file/specs/: design.md  verification.md
.github/workflows/: build.yml
agents/code/: config.yml  hook_fix.md.j2  pr.md.j2  resume.md.j2  system.md.j2  task.md.j2
agents/init/: system.md.j2  task.md.j2
agents/plan/: system.md.j2  task.md.j2
agents/review/: config.yml  fix.md.j2  system.md.j2  task.md.j2
agents/verify/: fix.md.j2  system.md.j2  task.md.j2
apps/gba-cli/: Cargo.toml
apps/gba-cli/src/: cli.rs  logging.rs  main.rs  tui.rs
crates/gba-core/: Cargo.toml
crates/gba-core/src/: agent.rs  config.rs  engine.rs  error.rs  events.rs  git.rs  hooks.rs  init.rs  lib.rs  plan.rs  run.rs  session.rs  spec.rs
crates/gba-pm/: Cargo.toml
crates/gba-pm/src/: error.rs  lib.rs  manager.rs  template.rs
specs/0001_core_architecture/: design.md
