[workspace]
members = ["crates/*", "apps/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# internal crates
gba-core = { path = "crates/gba-core" }
gba-pm = { path = "crates/gba-pm" }

# async runtime
tokio = { version = "1.49.0", features = ["full"] }

# claude agent
claude-agent-sdk-rs = "0.6.3"

# cli
clap = { version = "4.5.56", features = ["derive"] }

# tui
ratatui = "0.30.0"
crossterm = "0.29.0"

# template engine
minijinja = { version = "2.15.1", features = ["loader"] }

# serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"

# error handling
anyhow = "1.0.100"
thiserror = "2.0.18"

# builder
typed-builder = "0.23.2"

# logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# testing
tempfile = "3.19.1"
