[package]
name = "gba-cli"
description = "CLI interface for GBA - interactive TUI for Claude Agent powered repo automation"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gba"
path = "src/main.rs"

[dependencies]
gba-core = { workspace = true }
gba-pm = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
