[package]
name = "gba-core"
description = "Core execution engine for GBA - Claude Agent SDK based automation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
claude-agent-sdk-rs = { workspace = true }
tokio = { workspace = true }
gba-pm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
typed-builder = { workspace = true }
tracing = { workspace = true }
futures = "0.3"

[dev-dependencies]
tempfile = { workspace = true }
